--- a/app/src/main/res/layout/drawer_menu.xml
+++ b/app/src/main/res/layout/drawer_menu.xml
@@ -2,25 +2,70 @@
 <android.support.design.widget.NavigationView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_view"
     android:layout_height="match_parent"
     android:layout_gravity="start"
     android:fitsSystemWindows="true"
     app:headerLayout="@null"
     android:background="@color/drawer_bg"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    >
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="175dp"
+            app:srcCompat="@drawable/network"
+            android:id="@+id/imageView"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:scaleType="centerCrop" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/drawer_recycler"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="10dp"
-            />
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-    </RelativeLayout>
+        <TextView
+            android:text="sss"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvUser"
+            android:textSize="20sp"
+            android:textColor="@android:color/white"
+            android:fontFamily="@string/sans_serif_light"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintLeft_toLeftOf="@+id/imageView"
+            app:layout_constraintRight_toRightOf="@+id/imageView"
+            app:layout_constraintHorizontal_bias="0.05" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:id="@+id/tvExit"
+            android:text="@string/exit"
+            app:layout_constraintBottom_toTopOf="@+id/drawer_recycler"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintRight_toRightOf="@+id/imageView"
+            app:layout_constraintLeft_toLeftOf="@+id/imageView"
+            android:fontFamily="@string/sans_serif_medium"
+            app:layout_constraintHorizontal_bias="0.95" />
+    </android.support.constraint.ConstraintLayout>
+
+
+
+
 </android.support.design.widget.NavigationView>
