--- a/app/src/main/res/layout/item_drawer_parent.xml
+++ b/app/src/main/res/layout/item_drawer_parent.xml
@@ -10,5 +10,15 @@
     android:textSize="20sp"
     android:textColor="@android:color/black"
     android:fontFamily="@string/sans_serif_medium"
+    android:padding="3dp"
+    android:layout_marginLeft="10dp"
+    android:layout_gravity="center"
+    android:layout_weight="1"
     />
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_plus"
+        android:layout_weight="0.5"
+        android:layout_marginRight="10dp"/>
 </LinearLayout>
